--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"style-loader": "^1.0.1",
 		"ts-loader": "^6.2.1",
 		"typescript": "^3.7.2",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^3.0.0",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10",
