--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"homepage": "https://gitlab.com/Gigadrive/twitcharchive/twitcharchive#readme",
 	"dependencies": {
 		"bootstrap": "^4.4.1",
+		"css-loader": "^3.2.1",
 		"file-loader": "^5.0.2",
 		"jquery": "^3.4.1",
 		"less": "^3.10.3",
@@ -35,7 +36,7 @@
 		"mini-css-extract-plugin": "^0.8.0",
 		"node-sass": "^4.13.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
-		"sass-loader": "^8.0.0",
+		"sass-loader": "^7.3.1",
 		"style-loader": "^1.0.1",
 		"ts-loader": "^6.2.1",
 		"typescript": "^3.7.2",
