--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"mini-css-extract-plugin": "^0.8.0",
 		"node-sass": "^4.13.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
+		"popper.js": "^1.16.0",
 		"sass-loader": "^7.3.1",
 		"style-loader": "^1.0.1",
 		"ts-loader": "^6.2.1",
