--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,11 +1,12 @@
 framework:
     cache:
         # Unique name of your app: used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+        prefix_seed: gigadrive/twitcharchive
 
         # The "app" cache stores to the filesystem by default.
         # The data in this cache should persist between deploys.
         # Other options include:
+        app: cache.adapter.filesystem
 
         # Redis
         #app: cache.adapter.redis
@@ -15,5 +16,8 @@ framework:
         #app: cache.adapter.apcu
 
         # Namespaced pools use the above "app" backend by default
-        #pools:
-            #my.dedicated.cache: null
+        pools:
+            twitcharchive:
+                public: true
+            test:
+                public: true
