--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
