--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,21 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.5",
-        "symfony/asset": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
+	    "php": "^7.2.5",
+	    "ext-ctype": "*",
+	    "ext-curl": "^7.2",
+	    "ext-iconv": "*",
+	    "ext-json": "^1.6",
+	    "sensio/framework-extra-bundle": "^5.5",
+	    "symfony/asset": "5.0.*",
+	    "symfony/console": "5.0.*",
+	    "symfony/dotenv": "5.0.*",
+	    "symfony/expression-language": "5.0.*",
+	    "symfony/flex": "^1.3.1",
+	    "symfony/form": "5.0.*",
+	    "symfony/framework-bundle": "5.0.*",
+	    "symfony/http-client": "5.0.*",
+	    "symfony/intl": "5.0.*",
         "symfony/mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.0.*",
