Added CloudFlare environment variables

--- a/.env
+++ b/.env
@@ -34,3 +34,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
+CLOUDFLARE_API_KEY=
+CLOUDFLARE_EMAIL_ADDRESS=
+CLOUDFLARE_ACCOUNT_ID=
