Updated getUsers PHPDoc

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ nbdist/
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
+.idea/dataSources.xml
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
